@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-27T00:30:53Z",
+  "timestamp" : "2022-08-27T08:07:25Z",
   "count_outdated" : 1750,
   "uniques_outdated" : 521,
-  "count" : 1768,
-  "uniques" : 533,
+  "count" : 1769,
+  "uniques" : 534,
   "clones" : [
     {
       "timestamp": "2022-08-14T00:00:00Z",
@@ -65,6 +65,13 @@
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
