@@ -1,3 +1,11 @@
+2022-08-27T08:07:25Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2938544905
+* notice: last 14d: unq all: 6 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 521 1750 / 533 1768
+* notice: next accum: outdated-unq outdated-all / unq all: 521 1750 / 534 1769
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-27]
+
 2022-08-27T00:30:53Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2937385531
 * notice: last 14d: unq all: 6 18
